# flux-old

./: .gitignore  Cargo.toml  README.md
assets/: README.md
examples/: README.md
output/: README.md
scripts/: profile-cachegrind.sh  profile-samply.sh  profile.sh  render-examples.sh  run-dev.sh  run.sh
src/: args.rs  main.rs
src/example_scenes/: cornell_box.rs  defocus_blur.rs  dragon.rs  many_spheres.rs  material_demo.rs  mod.rs  suzanne.rs  wavefront_obj.rs
src/example_scenes/util/: cornell_box.rs  material_demo.rs  materials.rs  mod.rs  obj.rs  ply.rs
src/flux/: accel.rs  bounds.rs  camera.rs  denoise.rs  film.rs  interaction.rs  list.rs  mod.rs  onb.rs  pdf.rs  primitive.rs  ray.rs  render.rs  renderer.rs  sampler.rs  scene.rs  sphere.rs  updater.rs
src/flux/cameras/: mod.rs  perspective.rs
src/flux/integrators/: albedo.rs  mod.rs  normal.rs  path.rs
src/flux/lights/: infinite.rs  mod.rs  sky.rs
src/flux/materials/: dielectric.rs  diffuse_light.rs  matte.rs  metal.rs  mod.rs
src/flux/shapes/: floor.rs  mod.rs  quad.rs  quadbox.rs  sphere.rs  subdivision.rs  transform.rs  trimesh.rs
src/flux/textures/: checker.rs  constant.rs  image.rs  mod.rs  multiply.rs  noise.rs  uv.rs
