[package]
name = "flux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
embree4-sys = "0.0.10"
env_logger = "0.10.0"
glam = { version = "0.24.2", features = ["rand"] }
image = "0.24.7"
log = "0.4.20"
measure_time = "0.8.2"
rand = "0.8.5"

[profile.profiling]
inherits = "release"
debug = true
