[package]
name = "flux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
embree4-sys = "0.0.10"
env_logger = "0.10.0"
glam = { version = "0.24.2", features = ["rand"] }
image = "0.24.7"
log = "0.4.20"
measure_time = "0.8.2"
noise = "0.8.2"
num-format = "0.4.4"
num_cpus = "1.16.0"
oidn2-sys = "0.0.1"
ply-rs = "0.1.3"
rand = "0.8.5"
rayon = "1.8.0"
tobj = "4.0.0"

[profile.performance]
inherits = "release"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
